infrastructure/k8s/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: promptcorp
  labels:
    app: promptcorp-mongodb
    tier: database
    environment: production
spec:
  serviceName: mongodb-service
  replicas: 1
  selector:
    matchLabels:
      app: promptcorp-mongodb
  template:
    metadata:
      labels:
        app: promptcorp-mongodb
        tier: database
        environment: production
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
